--- a/fifo/CMakeLists.txt
+++ b/fifo/CMakeLists.txt
@@ -12,9 +12,10 @@ enable_testing()
 add_subdirectory(test)
 add_subdirectory(lib/googletest)
 
-set(LIB_NAME ${CMAKE_PROJECT_NAME}_lib)
+set(LIB_NAME ${PROJECT_NAME}_lib)
 
 file(GLOB_RECURSE SOURCES LIST_DIRECTORIES true include/*.h src/*.c)
 
 add_library(${LIB_NAME} STATIC ${SOURCES})
+target_include_directories(${LIB_NAME} PUBLIC include)
 
