--- a/fifo/test/CMakeLists.txt
+++ b/fifo/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Google Test
 
-set(BINARY ${CMAKE_PROJECT_NAME}_test)
+set(BINARY ${PROJECT_NAME}_test)
 
 file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.cc)
 
@@ -10,5 +10,5 @@ add_executable(${BINARY} ${TEST_SOURCES})
 
 add_test(NAME ${BINARY} COMMAND ${BINARY})
 
-target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib gtest_main)
+target_link_libraries(${BINARY} PUBLIC ${PROJECT_NAME}_lib gtest_main)
 
