--- a/thread_pool/test/CMakeLists.txt
+++ b/thread_pool/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Google Test
 
-set(BINARY ${CMAKE_PROJECT_NAME}_test)
+set(BINARY ${PROJECT_NAME}_test)
 
 file(GLOB_RECURSE TEST_SOURCES LIST_DIRECTORIES false *.cc)
 
@@ -10,10 +10,10 @@ add_executable(${BINARY} ${TEST_SOURCES})
 
 add_test(NAME ${BINARY} COMMAND ${BINARY})
 
-target_link_libraries(${BINARY} PUBLIC ${CMAKE_PROJECT_NAME}_lib gtest_main)
+target_link_libraries(${BINARY} PUBLIC ${PROJECT_NAME}_lib gtest_main)
 
 # Sample 1
 add_executable(sample1)
-target_link_libraries(sample1 PUBLIC ${CMAKE_PROJECT_NAME}_lib)
+target_link_libraries(sample1 PUBLIC ${PROJECT_NAME}_lib)
 target_sources(sample1 PRIVATE usecases/sample1.c)
 
